2006-09-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/httpvfs.tcl: rewritten to clean up http tokens and
	actually interpret data from them.
	(Mount): If a url doesn't return "ok" status, return failure.
	(stat, access): If HEAD returns 404 or status != ok, return ENOENT.

	* library/vfslib.tcl: code cleanup

2006-08-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/vfs.c: move static globals to being thread-specific.  If
	you wish to access a mount point or volume in a thread, you need
	to remount the file in the thread.  This is a change from the
	previous behavior that would allow access across threads, which
	was unsafe and would potentially crash.
		**** POTENTIAL INCOMPATIBILITY ****

2006-06-22  Jean-Claude Wippler  <jcw@equi4.com>

	* library/mkclvfs.tcl: Updated to latest 1.4 revision

2006-05-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/vfs.c (VfsOpenFileChannel): handle closing channels that
	were inherited as std channels. [Bug 1468291]

2006-03-12  Vince Darley <vincentdarley@sourceforge.net>

	* library/ftpvfs.tcl: provide caching of listings to improve
	performance for many standard use cases.

2006-02-27  Jean-Claude Wippler  <jcw@equi4.com>

	* library/mkclvfs.tcl: Small optimization so a writable starkit
	does not cause a real commit if no changes at all were made.

2006-01-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure, configure.in: update to TEA 3.5
	* tclconfig/tcl.m4:        TEA rcs 1.89 2006/01/25 21:25:02

2006-01-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* tclconfig/tcl.m4, configure: update to TEA 3.4 interim

2005-12-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* tclconfig/tcl.m4, configure.in, configure: update to TEA 3.4

2005-11-10  Jean-Claude Wippler  <jcw@equi4.com>

	* Makefile.in: added missing mkclvfs.tcl dependency

2005-11-09  Andreas Kupries <andreask@activestate.com>

	* library/vfslib.tcl:  Brought the version numbers of provide
	* library/starkit.tcl: and ifneeded commands back into sync.
